force-app/main/default/objects/QuoteSettings__mdt/QuoteSettings__mdt.object-meta.xml
<CustomObject>
    <description>This is used to hold all Quote related hardcoded values including SOQL Queries, any static numbers or Ids.</description>
    <label>QuoteSettings</label>
    <pluralLabel>QuoteSettings</pluralLabel>
</CustomObject>