force-app/main/default/objects/QuoteSettings__mdt/fields/ValueLong__c.field-meta.xml
<CustomField>
    <fullName>ValueLong__c</fullName>
    <label>ValueLong</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>