force-app/main/default/objects/QuoteSettings__mdt/fields/ValueSmall__c.field-meta.xml
<CustomField>
    <fullName>ValueSmall__c</fullName>
    <label>ValueSmall</label>
    <length>255</length>
    <type>Text</type>
</CustomField>